# pygenkit

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/pygenesis/: cli.py
src/pygenesis/ai/: __init__.py  review.py
src/pygenesis/cli/: app.py
src/pygenesis/commands/: new.py
src/pygenesis/generators/: __init__.py  base.py  deploy.py  docker.py  github_actions.py  orchestrator.py  project.py
src/pygenesis/health/: __init__.py  api.py  checks.py
src/pygenesis/models/: __init__.py  config.py
src/pygenesis/validators/: __init__.py  api.py  security.py  version.py  workflow.py
src/pygenkit/: cli.py
src/pygenkit/ai/: __init__.py  prompts.py  provider.py  review.py
src/pygenkit/cli/: __init__.py  app.py
src/pygenkit/config/: __init__.py
src/pygenkit/generators/: __init__.py  base.py  deploy.py  docker.py  github_actions.py  orchestrator.py  project.py
src/pygenkit/health/: __init__.py  api.py  checks.py
src/pygenkit/inspector/: __init__.py  api.py  debian.py  detect.py  git.py  pyproject.py
src/pygenkit/models/: __init__.py  config.py  health.py  inspection.py
src/pygenkit/render/: __init__.py  engine.py
src/pygenkit/utils/: __init__.py  files.py  filters.py
src/pygenkit/validators/: __init__.py  api.py  version.py  (+1 more)
tests/: test_ai.py  test_cli.py  test_cli_help.py  test_config.py  test_filters.py  test_generators.py  test_health.py  test_inspector.py  test_validators.py
(+67 files in other folders)
