[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pygenesis"
version = "0.2.0"
description = "Professional Python project generator — PyPI, APT, and Launchpad ready"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Alan Santos", email = "alan.profissional.dev@gmail.com" },
]

dependencies = [
    "typer>=0.12",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/alan-n7x/pygenesis"
Repository = "https://github.com/alan-n7x/pygenesis"
Issues = "https://github.com/alan-n7x/pygenesis/issues"

[project.scripts]
pygenesis = "pygenesis.cli:cli"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
pygenesis = ["templates/**/*", "templates/**"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "ARG"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short -ra"
